--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="See side-by-side examples of Ember Octane and Ember Classic">
+    <meta name="description" content="See side-by-side examples of EmberData's Request Service and older patterns.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for "head"}}
