--- a/tests/index.html
+++ b/tests/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Ember.js Octane vs Classic Cheat Sheet Tests</title>
+    <title>EmberData Request Service Cheat Sheet Tests</title>
     <meta name="description" content="See side-by-side examples of Ember Octane and Ember Classic">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
